tests/corpus/pass/phase2_comptime/ct2c_let_simple.gw
fn main() -> i32 {
    return comptime { let x = 7; x };
}
