tests/corpus/fail/borrow/b01_use_of_uninit.gw
fn main() -> i32 {
    let x: i32;
    return x;
}
